# metage2metabo

./: .gitignore  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  req_m2m_gha.txt  requirements.txt  requirements_m2m_analysis.txt  setup.cfg  setup.py  travis.yml
.github/workflows/: mirror_to_gitlab.yml  pythonpackage.yml  pythonpublish.yml
article_data/diabetes_study/: README.md  abundance.mat  addedvalue.tsv  addedvalue_by_family.tsv  addedvalue_long.tsv  community_reduction_composition.tsv  community_reduction_metrics.tsv  community_scopes.tsv  community_scopes_by_family.tsv  community_scopes_long.tsv  initial_community_composition.tsv  initial_community_size.tsv  mds_roc_diabetes.ipynb  metadata.csv  mgs_specI.tax  t2d_m2m.R  t2d_m2m_div.R  t2d_m2m_size.R  t2d_m2m_target_producers.R  t2d_m2m_tax.R  western_diet.sbml
article_data/gsmn_caracteristics/: figures.R  gut_cpd_producers.tsv  (+5 more)
docs/: Makefile  api.rst  command.rst  conf.py  environment.yml  index.rst  input.rst  install.rst  m2m_analysis.rst  make.bat  output.rst  requirements.txt  suppinformation.rst  troubleshooting.rst  tutorial.rst
external_dependencies/: README.md
metage2metabo/: __init__.py  __main__.py  __main_analysis__.py  m2m_analysis.py  m2m_workflow.py  sbml_management.py  utils.py
recipes/: Dockerfile  Singularity
test/: test_m2m.py  test_m2m_addedvalue.py  test_m2m_analysis.py  test_m2m_cofactors.py  test_m2m_cscope.py  test_m2m_iscope.py  test_m2m_metacom.py  test_m2m_mincom.py  test_m2m_recon.py  test_sbml_management.py  test_tiny_toy_metacom.py
(+53 files in other folders)
